1.最新消息 2.Tag功能 3.移除關鍵字,搜尋info2(產品特色)的程式

--- a/src/PKWeb/App_GlobalResources/resPublic.resx
+++ b/src/PKWeb/App_GlobalResources/resPublic.resx
@@ -374,4 +374,7 @@ Mail ： sha@mail.prokits.com.tw</value>
   <data name="meta_og_description" xml:space="preserve">
     <value>A friend that you can  trust</value>
   </data>
+  <data name="title_最新消息" xml:space="preserve">
+    <value>News</value>
+  </data>
 </root>
