--- a/src/PKWeb/App_GlobalResources/resPublic.zh-CN.resx
+++ b/src/PKWeb/App_GlobalResources/resPublic.zh-CN.resx
@@ -383,4 +383,7 @@ Mail：sha@mail.prokits.com.tw</value>
   <data name="meta_og_description" xml:space="preserve">
     <value>行家选择尽在宝工</value>
   </data>
+  <data name="title_最新消息" xml:space="preserve">
+    <value>最新消息</value>
+  </data>
 </root>
