--- a/src/PKWeb/App_GlobalResources/resPublic.zh-TW.resx
+++ b/src/PKWeb/App_GlobalResources/resPublic.zh-TW.resx
@@ -386,4 +386,7 @@ Mail：sha@mail.prokits.com.tw</value>
   <data name="title_最新消息" xml:space="preserve">
     <value>最新消息</value>
   </data>
+  <data name="title_Tag" xml:space="preserve">
+    <value>Tags</value>
+  </data>
 </root>
